@@ -17,38 +17,28 @@
  */
 package io.vertigo.core.node.config;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.lang.Assertion;
 import io.vertigo.core.node.definition.DefinitionProvider;
-import io.vertigo.core.param.Param;
 
 /**
  * @author mlaroche
  */
-public final class DefinitionProviderConfig {
-	private final Class<? extends DefinitionProvider> definitionProviderClass;
-	private final Map<String, String> params;
-	private final List<DefinitionResourceConfig> definitionResources;
+public record DefinitionProviderConfig(
+		Class<? extends DefinitionProvider> definitionProviderClass,
+		Map<String, String> params,
+		List<DefinitionResourceConfig> definitionResourceConfigs) {
 
-	DefinitionProviderConfig(
-			final Class<? extends DefinitionProvider> definitionProviderClass,
-			final List<Param> params,
-			final List<DefinitionResourceConfig> definitionResourceConfigs) {
+	public DefinitionProviderConfig {
 		Assertion.check()
 				.isNotNull(definitionProviderClass)
 				.isNotNull(params)
 				.isNotNull(definitionResourceConfigs);
-		//-----
-		this.definitionProviderClass = definitionProviderClass;
-		this.params = params
-				.stream()
-				.collect(Collectors.toMap(Param::getName, Param::getValue));
-		definitionResources = Collections.unmodifiableList(new ArrayList<>(definitionResourceConfigs));
+		//---
+		params = Map.copyOf(params);
+		definitionResourceConfigs = List.copyOf(definitionResourceConfigs);
 	}
 
 	/**
@@ -58,21 +48,6 @@ public final class DefinitionProviderConfig {
 	 */
 	public static DefinitionProviderConfigBuilder builder(final Class<? extends DefinitionProvider> definitionProviderClass) {
 		return new DefinitionProviderConfigBuilder(definitionProviderClass);
-	}
-
-	public Class<? extends DefinitionProvider> getDefinitionProviderClass() {
-		return definitionProviderClass;
-	}
-
-	public List<DefinitionResourceConfig> getDefinitionResourceConfigs() {
-		return definitionResources;
-	}
-
-	/**
-	 * @return the params
-	 */
-	public Map<String, String> getParams() {
-		return params;
 	}
 
 	@Override
